Add raport file & API Creation notebook

--- a/API_Creation.ipynb
+++ b/API_Creation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "bcd274c1-d240-4281-9875-b3934bd953ec",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "bd40cdd1-3ed2-45cd-91d6-425ef08f93b5",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "bf837e9e-60db-4d42-bebe-e34a6e237b6e",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "OneVsRestClassifier(estimator=LogisticRegression(C=10))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "8f050d4f-f4f5-43c5-b7c2-25debe7f8e3d",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "29b3ec7a-4676-432f-a473-97ca8dee2268",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "753bffd0-d0ba-4d97-ae91-32081ca2a206",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "5642dc42-ea93-40ff-8959-57dfd1889b2d",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "4  <p>I use an SQL statement to remove records th...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "af14fd77-bce0-40b9-bf95-719e8e0e8fb5",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "fb3990d9-14fa-4307-9e90-608ad40dd0c0",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "d9fbe754-c63c-4bd2-b0d2-4d64915e8806",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "05173135-8de0-4016-8175-139bf63e7223",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "0a1d1294-dc5c-4ddf-84cc-0abff6d9261d",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "6cba4daf-9a27-41d5-8e84-a66127f2fc5a",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "2da2f88e-9e2d-450d-8256-adb6f08cc9ae",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "f7c618db-a529-479f-89f1-29091a986ced",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "d5d411dd-27c7-4d05-8169-e093c65ce1a3",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        " 'factories']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "f9de0103-182d-4c02-b132-deef7d993e73",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "7702a540-5685-4c01-82dc-0e9466d4cd19",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "25d165a1-d4de-4ef9-acba-08718d7ab425",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "ecd7e8d7-03e3-4671-8808-871ea3958c0c",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "3227721c-81af-4b8d-b128-6ceda750a668",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "6774cada-5cc1-4cbc-9dbd-2a6fc9e3f1b1",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "\twith 137579 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "547bc5ae-ca20-41e1-b289-bc73b4717c4d",
    "metadata": {
     "tags": []
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "580f27de-2252-411e-99e1-f53a2c22c5f5",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "       'wordpress', 'wpf', 'xcode', 'xml', 'zend-framework'], dtype=object)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,52 +548,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "id": "0a89b8c8-e88b-4a14-91f3-548fb8538953",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yPred[0]"
+    "yPred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "1265948b-1b08-49fc-b97a-b3a3ed521a2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfRes = pd.DataFrame(yPred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "42fbc18b-bf65-4a9c-b095-ecbe482d6766",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfRes.columns = multilabel.classes_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "c9f19fa8-6332-43cc-baa7-7588ad00d4e5",
    "metadata": {},
    "outputs": [],
@@ -603,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "id": "3504aec1-f61e-4082-8c25-a8f6e2da0667",
    "metadata": {},
    "outputs": [],
@@ -613,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "id": "198ec910-91f3-4d1f-bda9-5889cc727a06",
    "metadata": {},
    "outputs": [],
@@ -623,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "id": "090f71d8-b545-4819-894d-b3f10f0277fe",
    "metadata": {},
    "outputs": [],
@@ -633,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "id": "c337b807-ed0a-4e61-9fc4-c3afbe02d7a5",
    "metadata": {},
    "outputs": [],
@@ -643,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "id": "9a57fc71-b07b-4f0b-8193-5ddf2bbdb55f",
    "metadata": {
     "tags": []
@@ -672,8 +654,8 @@
        "      <th></th>\n",
        "      <th>Text</th>\n",
        "      <th>Tag_pred</th>\n",
-       "      <th>Tag_orig</th>\n",
        "      <th>Tag_Filtered</th>\n",
+       "      <th>Tag_orig</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -681,36 +663,36 @@
        "      <th>0</th>\n",
        "      <td>possible use c# object initializers factoryloo...</td>\n",
        "      <td>[c#]</td>\n",
-       "      <td>[c#-3.0, factory]</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[c#-3.0, factory]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>excel conditional formatting self referencetry...</td>\n",
        "      <td>[excel]</td>\n",
-       "      <td>[excel, worksheet-function, conditional-format...</td>\n",
        "      <td>[excel]</td>\n",
+       "      <td>[excel, worksheet-function, conditional-format...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>best way check current date clause sql querytr...</td>\n",
        "      <td>[sql]</td>\n",
-       "      <td>[sql, tsql, stored-procedures, performance]</td>\n",
        "      <td>[sql, tsql, performance]</td>\n",
+       "      <td>[sql, tsql, stored-procedures, performance]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>detect internet connection activation delphius...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[delphi, winapi, wininet, internet-connection]</td>\n",
        "      <td>[delphi, winapi]</td>\n",
+       "      <td>[delphi, winapi, wininet, internet-connection]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>improve asp script performance take 3+ minute ...</td>\n",
        "      <td>[sql, sql-server]</td>\n",
-       "      <td>[sql, asp-classic]</td>\n",
        "      <td>[sql]</td>\n",
+       "      <td>[sql, asp-classic]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -730,29 +712,29 @@
        "      <th>4996</th>\n",
        "      <td>viability c# .net new standard game dev platfo...</td>\n",
        "      <td>[c#]</td>\n",
-       "      <td>[c#, mono, xna]</td>\n",
        "      <td>[c#]</td>\n",
+       "      <td>[c#, mono, xna]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4997</th>\n",
        "      <td>possible animation appear wpf navigationwindow...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[wpf, animation, navigationwindow]</td>\n",
        "      <td>[wpf]</td>\n",
+       "      <td>[wpf, animation, navigationwindow]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4998</th>\n",
        "      <td>deploying flex project leveraging imported web...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[apache-flex, flexbuilder]</td>\n",
        "      <td>[apache-flex]</td>\n",
+       "      <td>[apache-flex, flexbuilder]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4999</th>\n",
        "      <td>compute nth root big integerneed way compute n...</td>\n",
        "      <td>[python]</td>\n",
-       "      <td>[python, math, nth-root]</td>\n",
        "      <td>[python]</td>\n",
+       "      <td>[python, math, nth-root]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -773,36 +755,36 @@
        "4998  deploying flex project leveraging imported web...                 []   \n",
        "4999  compute nth root big integerneed way compute n...           [python]   \n",
        "\n",
-       "                                               Tag_orig  \\\n",
-       "0                                     [c#-3.0, factory]   \n",
-       "1     [excel, worksheet-function, conditional-format...   \n",
-       "2           [sql, tsql, stored-procedures, performance]   \n",
-       "3        [delphi, winapi, wininet, internet-connection]   \n",
-       "4                                    [sql, asp-classic]   \n",
-       "...                                                 ...   \n",
-       "4995                               [javascript, jquery]   \n",
-       "4996                                    [c#, mono, xna]   \n",
-       "4997                 [wpf, animation, navigationwindow]   \n",
-       "4998                         [apache-flex, flexbuilder]   \n",
-       "4999                           [python, math, nth-root]   \n",
+       "                  Tag_Filtered  \\\n",
+       "0                           []   \n",
+       "1                      [excel]   \n",
+       "2     [sql, tsql, performance]   \n",
+       "3             [delphi, winapi]   \n",
+       "4                        [sql]   \n",
+       "...                        ...   \n",
+       "4995      [javascript, jquery]   \n",
+       "4996                      [c#]   \n",
+       "4997                     [wpf]   \n",
+       "4998             [apache-flex]   \n",
+       "4999                  [python]   \n",
        "\n",
-       "                  Tag_Filtered  \n",
-       "0                           []  \n",
-       "1                      [excel]  \n",
-       "2     [sql, tsql, performance]  \n",
-       "3             [delphi, winapi]  \n",
-       "4                        [sql]  \n",
-       "...                        ...  \n",
-       "4995      [javascript, jquery]  \n",
-       "4996                      [c#]  \n",
-       "4997                     [wpf]  \n",
-       "4998             [apache-flex]  \n",
-       "4999                  [python]  \n",
+       "                                               Tag_orig  \n",
+       "0                                     [c#-3.0, factory]  \n",
+       "1     [excel, worksheet-function, conditional-format...  \n",
+       "2           [sql, tsql, stored-procedures, performance]  \n",
+       "3        [delphi, winapi, wininet, internet-connection]  \n",
+       "4                                    [sql, asp-classic]  \n",
+       "...                                                 ...  \n",
+       "4995                               [javascript, jquery]  \n",
+       "4996                                    [c#, mono, xna]  \n",
+       "4997                 [wpf, animation, navigationwindow]  \n",
+       "4998                         [apache-flex, flexbuilder]  \n",
+       "4999                           [python, math, nth-root]  \n",
        "\n",
        "[5000 rows x 4 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
